Fixing Masonry bug where log posts overlap

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -547,7 +547,7 @@
 }
 
 .log-img {
-    max-height: 170px;
+    height: 170px;
     width: 100%;
     overflow: hidden;
 }
